--- a/WebDev/2-Javascript/javascript-hello-world.html
+++ b/WebDev/2-Javascript/javascript-hello-world.html
@@ -6,11 +6,7 @@
     <title>JavaScript Hello World</title>
 </head>
 <body>
-    <button type="button" onclick="sayhello()"> Click Me </button>
-    <script>
-        function sayhello(){
-            alert("Hello World !");
-        }
-    </script>
+    <button type="button" onclick="getName()"> Click Me </button>
+    <script src="js/javascript-hello-world.js"></script>
 </body>
 </html>
