--- a/WebDev/2-Javascript/Week1-workshop/park.html
+++ b/WebDev/2-Javascript/Week1-workshop/park.html
@@ -1,3 +1,4 @@
+<!-- Part 1 of the workshop -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +7,9 @@
     <title>Wild Waves Aquatic Park</title>
 </head>
 <body>
-    
+    <h1>Wild Waves Aquatic Park</h1>
+    <button type="button" onclick="purchaseAttraction()"> Purchase Attraction</button>
+    <!-- Java Script File to validate is user is allowed for the attraction or not -->  
+    <script src="js/javascript-park.js"></script>
 </body>
 </html>
