--- a/WebDev/2-Javascript/ fib.html
+++ b/WebDev/2-Javascript/ fib.html
@@ -9,6 +9,7 @@
     <h1>Fibonacci Series</h1>
     <h2>Check Console log for Series</h2>
     <script>
+        console.log("Using While Loop");
         let n = prompt("Enter the numbers you need in Fibonacci series");
         let a = 0;
         let b = 1;
@@ -21,6 +22,18 @@
             a = b; 
             b = temp; 
             count++
+        }
+
+        console.log("Using For Loop");
+        first_number = 0; 
+        second_number = 1; 
+        for (let count_for = 0; count_for < n; count_for++){
+            console.log(first_number);
+            let temp_number = first_number + second_number;
+            first_number = second_number;
+            second_number = temp_number;
+            //console.log("first number after assignment", first_number);
+            //console.log("second number after assignment", second_number);
         }
     </script>
 </body>
