--- a/FullStackProject/index.html
+++ b/FullStackProject/index.html
@@ -168,6 +168,14 @@
                         <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="0" class="active"></button>
                         <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="1"></button>
                         <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="2"></button>
+                        <div class="btn-group" id="carouselButton">
+                            <button class="btn btn-danger btn-sm" id="carouselPause">
+                                <i class="fa-solid fa-pause"></i>
+                            </button>
+                            <button class="btn btn-danger btn-sm" id="carouselPlay">
+                                <i class="fa-solid fa-play"></i>
+                            </button>
+                        </div>
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -303,6 +311,7 @@
 
     <!-- Bootstrap JavaScript plugins -->
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="js/scripts.js"></script>
 
 </body>
 
