Random color exercise

--- a/WebDev/2-Javascript/Random-color-generator/index.html
+++ b/WebDev/2-Javascript/Random-color-generator/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inspire Design Color Generator</title>
-    <style src = "style.css"></style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Inspire Design Color Inspiration Tool</h1>
     <p>Welcome to the color inspiration tool. Designers can use this tool to generate fresh and unique color schemes for their projects.</p>
     <p>Simply click the button below to generate a new color inspiration</p>
+    <br>
     <button id="colorBtn">Change Color</button>
     <button id="resetBtn">Reset Color</button>
+    <br><br>
     <div id="container">Color Code: <span id="colorCode">#FFFFFF</span></div>
     <script src="scripts.js"></script>
 </body>
